--- a/packages/edit-site/src/components/sidebar-navigation-screen/style.scss
+++ b/packages/edit-site/src/components/sidebar-navigation-screen/style.scss
@@ -90,17 +90,16 @@
 	}
 
 	.edit-site-global-styles-variations_item-preview {
-		border: $gray-900 $border-width solid;
+		box-shadow: 0 0 0 $border-width $gray-900;
 	}
 	.edit-site-global-styles-variations_item.is-active .edit-site-global-styles-variations_item-preview {
-		border: $gray-100 $border-width solid;
+		box-shadow: 0 0 0 $border-width $gray-100;
 	}
 	.edit-site-global-styles-variations_item:hover .edit-site-global-styles-variations_item-preview {
-		border: var(--wp-admin-theme-color) $border-width solid;
+		box-shadow: 0 0 0 $border-width var(--wp-admin-theme-color);
 	}
-
 	.edit-site-global-styles-variations_item:focus .edit-site-global-styles-variations_item-preview {
-		border: var(--wp-admin-theme-color) var(--wp-admin-border-width-focus) solid;
+		box-shadow: 0 0 0 var(--wp-admin-border-width-focus) var(--wp-admin-theme-color);
 	}
 }
 
